# rekey-vstar

./: .env.example  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
data/annotations/: dynamic_vstar_slots_latest.jsonl  dynamic_vstar_slots_latest_zh.jsonl  target_ref_zh_en.json  vstar_relabel_latest_fixed.jsonl  vstar_relabel_latest_fixed_README.md  vstar_relabel_latest_fixed_items.jsonl
data/processed/: cross_model_runs.json  (+5 more)
docs/: API_KEYS.md  DATASET.md  QUICKSTART.md  RELEASE.md  cross_model_motorcycle_sweep.md  experiment_plan.md  experiment_results.md  gpt_motorcycle_sweep.md  motorcycle_temp_sweep.md  qwen_full_vstar_bias_sweep.md  qwen_image_options_only.md  qwen_official_like_rephrase_eval.md  qwen_rephrase_eval.md  qwen_vstar_official_like_reproduction.md  qwen_vstar_relabel_eval.md
dynamic_vstar/: __init__.py  compositing.py  concept_library.py  env.py  geometry.py  image_api.py  pipeline.py  planning.py  rule_planner.py  sampling.py  schemas.py  vaw_filter.py
results/: vlm_add_usability_recheck.jsonl
scripts/: build_eval_dataset.py  build_vaw_filter.py  compute_cost.py  compute_tables.py  download_rekey_benchmark.py  export_vstar_relabels.py  gen_figure_subimages.py  parse_labelstudio_export.py  prepare_vstar.py  run_dynamic_eval.py  run_dynamic_vstar_pipeline.py  run_vlm_annotator.py  run_vstar_image_eval.py  start_labelstudio.sh  start_labelstudio_public.sh  update_position_questions.py  upload_rekey_benchmark.py  upload_vstar_to_labelstudio.py
tests/: test_dynamic_vstar.py
(+219 files in other folders)
